--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
+/*==================================== main =================================*/
 * {
-	margin: 0; 
+	margin: 0;
 	padding: 0;
 }
 
 body {
 	color: white;
-	font font-weight: normal;
-	font-family: Roboto, Arial, sans-serif;
+	font-weight: normal;
+	font-family: Roboto, Arial, Helvetica, sans-serif;
 	text-shadow: 0.4px 0.4px 2px rgba(0, 0, 0, 0.5);
 	font-size: 12px;
 	cursor: default;
@@ -20,9 +21,7 @@ a {
 	cursor: pointer;
 }
 
-a:hover {
-	opacity: 1;
-}
+a:hover {opacity: 1;}
 
 .icon-link {
 	opacity: 0.7;
@@ -31,16 +30,16 @@ a:hover {
   top: -2px;
 }
 
-.icon-link:hover {
-	opacity: 1; 
-}
+.icon-link:hover {opacity: 1;}
+/*===========================================================================*/
+
 /*============================= background images ===========================*/
 .background-images {
 	width: 100%;
 	height: 100%;
-	position: fixed; 
-  left: 0px; 
-  top: 0px; 
+	position: fixed;
+  left: 0px;
+  top: 0px;
   z-index: 0;
 }
 
@@ -55,14 +54,11 @@ a:hover {
 	z-index: 0;
 }
 
-.background-images .fade-out {
-	opacity: 0;
-}
+.background-images .fade-out {opacity: 0;}
 
-.background-images .active {
-	z-index: 1;
-}
+.background-images .active {z-index: 1;}
 /*===========================================================================*/
+
 /*=================================== font ==================================*/
 @font-face {
   font-family: "icon";
@@ -73,7 +69,6 @@ a:hover {
     url("fonts-icons/icon.svg#icon") format("svg");
   font-weight: normal;
   font-style: normal;
-
 }
 
 [data-icon]:before {
@@ -83,7 +78,6 @@ a:hover {
   font-weight: normal !important;
   font-variant: normal !important;
   text-transform: none !important;
-  speak: none;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -96,39 +90,20 @@ a:hover {
   font-weight: normal !important;
   font-variant: normal !important;
   text-transform: none !important;
-  speak: none;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-sun:before {
-  content: "\61";
-}
-.icon-settings:before {
-  content: "\62";
-}
-.icon-chrome:before {
-  content: "\63";
-}
-.icon-apps:before {
-  content: "\64";
-}
-.icon-like-love-streamline:before {
-  content: "\65";
-}
-.icon-twitter:before {
-  content: "\66";
-}
-.icon-wind:before {
-  content: "\67";
-}
-.icon-wind-cloud:before {
-  content: "\68";
-}
-.icon-wind-rain:before {
-  content: "\69";
-}
+.icon-sun:before {content: "\61";}
+.icon-settings:before {content: "\62";}
+.icon-chrome:before {content: "\63";}
+.icon-apps:before {content: "\64";}
+.icon-like-love-streamline:before {content: "\65";}
+.icon-twitter:before {content: "\66";}
+.icon-wind:before {content: "\67";}
+.icon-wind-cloud:before {content: "\68";}
+.icon-wind-rain:before {content: "\69";}
 /*=========================================================================*/
 
 /*=============================== links-popup =============================*/
@@ -142,15 +117,7 @@ a:hover {
 	transition: all 0.3s ease-in-out;
 }
 
-.links:hover {
-	opacity: 1;
-}
-
-/*input[type="checkbox"] {
-	position: fixed;
-	left: -100%; 
-	bottom: -100%;
-}*/
+.links:hover {opacity: 1;}
 
 #links-popup-window {
 	width: 200px;
@@ -163,13 +130,13 @@ a:hover {
 	font-size: 1.3em;
 	transition: all 0.3s ease-in-out;
 	z-index: 50;
-	display: none;	
+	display: none;
 }
 
 #links-popup-window:before {
   content: "";
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border: 7px solid transparent;
   border-bottom-color: black;
   opacity: 0.9;
@@ -202,10 +169,7 @@ a,i {
   top: -2px;
 }
 
-#chrometab:hover,
-#apps:hover {
-	opacity: 1;
-}
+#chrometab:hover, #apps:hover {opacity: 1;}
 
 #newlink {
 	border: none;
@@ -241,7 +205,7 @@ a,i {
   right: -6%;
   text-align: center;
   font-family: arial;
-  opacity: 1; 
+  opacity: 1;
   cursor: pointer;
 }
 
@@ -273,8 +237,8 @@ a,i {
 
 #meteo-popup-window:before {
   content: "";
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border: 7px solid transparent;
   border-bottom-color: black;
   opacity: 0.9;
@@ -283,24 +247,16 @@ a,i {
   bottom: 100%;
 }
 
-/*input[type="checkbox"]:checked ~ #meteo-popup-window {
-	z-index: 50;
-  opacity: 0.9;
-  transform: translateY(3%);
-}*/
-
-#meteo-city {
-	font-size: 1.2em; 
-}
+#meteo-city {font-size: 1.2em;}
 
 #meteo-state {
-	opacity: 0.8; 
+	opacity: 0.8;
 	font-size: 1.1em;
 	margin-bottom: 10px;
 }
 
 #meteo-icon {
-	font-size: 3.5em; 
+	font-size: 3.5em;
 	font-style: normal;
 	color: white;
 	opacity: 1;
@@ -312,14 +268,14 @@ a,i {
 	display: inline-block;
 	border-top: solid 1px rgba(208,208,208,0.3);
 	margin-top: 25px;
-	font-size: 0.7em; 
+	font-size: 0.7em;
 	opacity: 0.7;
 }
 
 .day {
-	margin-top: 10px; 
+	margin-top: 10px;
 	text-align: center;
-	padding: 5px; 
+	padding: 5px;
 	border: solid 1px transparent;
 	transition: all 0.3s ease-in-out;
 }
@@ -332,9 +288,9 @@ a,i {
 
 .temp-icon {
 	font-style: normal;
-	opacity: 1; 
+	opacity: 1;
 	color: white;
-	font-size: 1.7em; 
+	font-size: 1.7em;
 }
 /*==========================================================================*/
 
@@ -357,15 +313,11 @@ a,i {
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
-} 
-
-.two-points {
-	transition: 0.3s ease-in-out;
-} 
-
-.invisible {
-	opacity: 0;
 }
+
+.two-points {transition: 0.3s ease-in-out;}
+
+.invisible {opacity: 0;}
 
 #greeting {
 	width: 600px;
@@ -377,7 +329,7 @@ a,i {
 }
 
 #main-focus-wraper {
-  font-size: 2.75em; 
+  font-size: 2.75em;
   width: 600px;
 	color: white;
 	position: relative;
@@ -390,7 +342,7 @@ input[type="text"] {
   outline: none;
   border: none;
   border-bottom: 1.5px solid #FFFFFF;
-  font-size: 1.3em; 
+  font-size: 1.3em;
   color: white;
   text-align: center;
   width: 495px;
@@ -408,7 +360,7 @@ input[type="text"] {
 
 #settings-checkbox {
 	position: fixed;
-	left: -999999px; 
+	left: -999999px;
 	bottom: -999999px;
 }
 
@@ -444,8 +396,8 @@ input[type="text"] {
 
 #settings-popup-window:before {
   content: "";
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border: 7px solid transparent;
   border-top-color: black;
   opacity: 0.9;
@@ -454,14 +406,7 @@ input[type="text"] {
   top: 100%;
 }
 
-/*input[type="checkbox"]:checked ~ #settings-popup-window {
-	z-index: 50;
-  opacity: 0.9;
-}*/
-
-.rotate {
-	transform: rotate(60deg) scale(1.2);
-}
+.rotate {transform: rotate(60deg) scale(1.2);}
 /*=========================================================================*/
 
 /*============================ geolocation-block ==========================*/
@@ -485,7 +430,7 @@ input[type="text"] {
 #geolocation-block:hover .geolocation-author {
 	opacity: 0.7;
 	transform: translateY(20%);
-} 
+}
 
 .geolocation {
 	position: fixed;
@@ -499,26 +444,24 @@ input[type="text"] {
 	transition: all 0.3s 0s ease;
 }
 
-#geolocation-block:hover .geolocation {
-	transform: translateY(-30%);
-}
+#geolocation-block:hover .geolocation {transform: translateY(-30%);}
 /*=========================================================================*/
 
 /*============================== quote-block ==============================*/
 #quote-block {
-	height: 60px; 
+	height: 60px;
 	width: 472px;
 	position: fixed;
 	bottom: 2.5%;
 	left: 50%;
-	transform: translate(-50%);	
+	transform: translate(-50%);
 }
 
 .quote {
-	font-size: 1.5em; 
-    font-weight: 300;
+	font-size: 1.5em;
+	font-weight: 300;
 	position: relative;
-	top: 62%;	
+	top: 62%;
 	text-align: center;
 	opacity: 0.7;
 	transition: all 0.3s ease-in-out;
@@ -538,11 +481,9 @@ input[type="text"] {
 #quote-block:hover .quote-author {
 	opacity: 0.7;
 	transform: translateY(45%);
-} 
-
-#quote-block:hover .quote {
-	transform: translateY(-50%);
 }
+
+#quote-block:hover .quote {transform: translateY(-50%);}
 
 span,i {
 	display: inline-block;
@@ -564,19 +505,17 @@ span,i {
 /*=========================================================================*/
 
 @media screen and (max-height: 720px) {
-	#time {
-		font-size: 12em;
-  }
-	
+	#time {font-size: 12em;}
+
 	#greeting {
 		font-size: 3.5em;
   	padding-bottom: 6%;
 	}
 
 	input[type="text"] {
-  font-size: 1.2em;
-  width: 388px;
-	}	
+		font-size: 1.2em;
+		width: 388px;
+	}
 }
 
 @media screen and (max-height: 620px) {
@@ -585,18 +524,16 @@ span,i {
 	  top: 28%;
 	}
 
-	#time {
-		font-size: 11em;
-  }
-	
+	#time {font-size: 11em;}
+
 	#greeting {
 		font-size: 3.3em;
   	padding-bottom: 3%;
 	}
 
 	input[type="text"] {
-  font-size: 1em;
-  width: 388px;
+		font-size: 1em;
+		width: 388px;
 	}
 }
 
@@ -606,23 +543,19 @@ span,i {
 	  top: 15%;
 	}
 
-	#time {
-		font-size: 10em;
-  }
-	
+	#time {font-size: 10em;}
+
 	#greeting {
 		font-size: 3em;
   	padding-bottom: 1%;
 	}
-	
+
 	input[type="text"] {
-  font-size: 1em;
-  width: 358px;
+		font-size: 1em;
+		width: 358px;
 	}
 
-	#location {
-		top: 5.5%;
-	}
+	#location {top: 5.5%;}
 }
 
 @media screen and (max-height: 393px) {
@@ -639,17 +572,17 @@ span,i {
 	}
 
 	#main-focus-wraper {
-	  font-size: 2.75em; 
+	  font-size: 2.75em;
 		color: white;
 		position: fixed;
 		top: 34%;
 	}
 
 	.quote {
-		font-size: 1.5em; 
+		font-size: 1.5em;
 	  font-weight: 300;
 		position: relative;
-		top: 55%;	
+		top: 55%;
 		text-align: center;
 		opacity: 0.7;
 		transition: all 0.3s ease-in-out;
@@ -672,66 +605,46 @@ span,i {
 	}
 
 	input[type="text"] {
-  font-size: 1em;
-  width: 338px;
+		font-size: 1em;
+		width: 338px;
 	}
 
-	#location {
-		top: 5.5%;
-	}
+	#location {top: 5.5%;}
 }
 
 @media screen and (max-height: 330px) {
-  #greeting {
-		top: -33%;
-	}
+  #greeting {top: -33%;}
 
-	#main-focus-wraper {
-		top: 24%;
-	}	
+	#main-focus-wraper {top: 24%;}
 
-	#location {
-		top: 5.5%;
-	}
+	#location {top: 5.5%;}
 }
 
 @media screen and (max-height: 270px) {
-  #greeting {
-		top: -42%;
-	}
+  #greeting {top: -42%;}
 
-	#main-focus-wraper {
-		top: 10%;
-	}	
+	#main-focus-wraper {top: 10%;}
 
-	#location {
-		top: 5.5%;
-	}
+	#location {top: 5.5%;}
 }
 
 @media screen and (max-width: 900px) {
- #geolocation {
-	width: 100px;
-	}
+ #geolocation {width: 100px;}
 
- #quote-block {
-	width: 300px;
- }
+ #quote-block {width: 300px;}
 }
 
 @media screen and (max-width: 750px) {
 	#quote-block {
-		height: 60px; 
+		height: 60px;
 		width: 350px;
 		position: fixed;
 		bottom: 2.5%;
 		left: 50%;
-		transform: translate(-50%);	
+		transform: translate(-50%);
 	}
 
-	#settings-popup-window {
-		right: 0%;
-	}
+	#settings-popup-window {right: 0%;}
 
 	#geolocation-block {
 		opacity: 0;
@@ -740,37 +653,27 @@ span,i {
 }
 
 @media screen and (max-width: 620px) {
-	#greeting {
-		width: 420px;
-	}
+	#greeting {width: 420px;}
 }
 
 @media screen and (max-width: 620px) {
-	#meteo-popup-window {
-		width: 310px;
-	}
+	#meteo-popup-window {width: 310px;}
 }
 
 @media screen and (max-width: 500px) {
-	#time {
-		font-size: 10em;
-  }
-	
+	#time {font-size: 10em;}
+
 	#greeting {
 		font-size: 2.2em;
   	padding-bottom: 3%;
 	}
 
-	#main-focus-wraper {
-		font-size: 1.8em;
-	}
+	#main-focus-wraper {font-size: 1.8em;}
 
 	#main-focus {
   	font-size: 0.8em;
   	width: 315px;
 	}
 
- .quote {
-	font-size: 1.15em;
- }
+ .quote {font-size: 1.15em;}
 }
