--- a/style.css
+++ b/style.css
@@ -315,33 +315,13 @@ a,i {
 
 .invisible {opacity: 0;}
 
-#greeting {
+.greeting {
 	width: 600px;
 	position: relative;
 	left: 50%;
 	transform: translateX(-50%);
 	font-size: 4em;
   padding-bottom: 8%;
-}
-
-#main-focus-wraper {
-  font-size: 2.75em;
-  width: 600px;
-	color: white;
-	position: relative;
-	left: 50%;
-	transform: translateX(-50%);
-}
-
-input[type="text"] {
-  background: transparent;
-  outline: none;
-  border: none;
-  border-bottom: 1.5px solid #FFFFFF;
-  font-size: 1.3em;
-  color: white;
-  text-align: center;
-  width: 495px;
 }
 /*=========================================================================*/
 
