--- a/style.css
+++ b/style.css
@@ -31,32 +31,11 @@ a:hover {opacity: 1;}
 }
 
 .icon-link:hover {opacity: 1;}
-/*===========================================================================*/
 
-/*============================= background images ===========================*/
-.background-images {
-	width: 100%;
-	height: 100vh;
-	position: fixed;
-  left: 0px;
-  top: 0px;
-  z-index: 0;
+canvas {
+	position: relative;
+	left: 4px;
 }
-
-.background-images img {
-	width: auto;
-	min-width: 100%;
-	height: 100vh;
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-}
-
-.background-images .fade-out {opacity: 0;}
-
-.background-images .active {z-index: 1;}
 /*===========================================================================*/
 
 /*=================================== font ==================================*/
@@ -106,7 +85,33 @@ a:hover {opacity: 1;}
 .icon-wind-rain:before {content: "\69";}
 /*=========================================================================*/
 
-/*=============================== links-popup =============================*/
+/*============================= background images ===========================*/
+.background-images {
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 0;
+}
+
+.background-images img {
+	width: auto;
+	min-width: 100%;
+	height: 100vh;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+}
+
+.background-images .fade-out {opacity: 0;}
+
+.background-images .active {z-index: 1;}
+/*===========================================================================*/
+
+/*=============================== links-popup ===============================*/
 .links {
 	cursor: pointer;
 	position: fixed;
@@ -156,7 +161,7 @@ input[type="checkbox"]:checked ~ #links-popup-window {
 	transition: all 0.3s ease-in-out;
 }
 
-a,i {
+a, i {
 	display: inline-block;
   vertical-align: sub;
   height: 16px;
@@ -187,15 +192,16 @@ a,i {
   top: 10px;
   line-height: 29px;
 }
-/*==========================================================================*/
+/*=============================================================================*/
 
 /*================================= meteo top right ===========================*/
 .meteo-wrapper {
   width: 98px;
   height: 73px;
   position: fixed;
-  top: 1.5%;
-  right: 0%;
+	top: -0.5%;
+	right: 2%;
+	opacity: 0.7;
 }
 
 .meteo-btn {
@@ -210,14 +216,16 @@ a,i {
 }
 
 .meteo__item-top .temperature__current	{
-	vertical-align: baseline;
-	line-height: 44px;
-	font-size: 19px;
+	position: relative;
+	top: 8px;
+	left: -4px;
+	line-height: 66px;
+	font-size: 24px;
 }
 
 .meteo__item-bottom	{
 	text-align: center;
-	font-size: 15px;
+	font-size: 13px;
 }
 
 #temperature {
@@ -314,8 +322,6 @@ a,i {
 
 .invisible {opacity: 0;}
 /*=========================================================================*/
-
-
 
 /*============================== settings-popup ===========================*/
 .settings-geolocation-wrapper {
@@ -459,7 +465,7 @@ span,i {
 }
 /*=========================================================================*/
 
-/*==========================whole background up============================*/
+/*========================= whole background up ===========================*/
 .toggle-on {
 	opacity: 0;
 	transition: all 0.7s ease-in-out;
@@ -472,6 +478,7 @@ span,i {
 }
 /*=========================================================================*/
 
+/*========================== media queries ================================*/
 @media screen and (max-height: 720px) {
 	#time {font-size: 12em;}
 }
@@ -492,7 +499,6 @@ span,i {
 	}
 
 	#time {font-size: 10em;}
-
 	#location {top: 5.5%;}
 }
 
@@ -540,7 +546,6 @@ span,i {
 
 @media screen and (max-width: 900px) {
  #geolocation {width: 100px;}
-
  #quote-block {width: 300px;}
 }
 
@@ -568,5 +573,12 @@ span,i {
 
 @media screen and (max-width: 500px) {
 	#time {font-size: 10em;}
- .quote {font-size: 1.15em;}
+	#quote-block{
+		width: 270px;
+	 	left: 50%;
+	 	transform: translateX(-50%);
+	}
+	.quote {font-size: 1.15em;}
+	.meteo-wrapper {top: -2.5%;}
 }
+/*=========================================================================*/
