--- a/css/greet.css
+++ b/css/greet.css
@@ -1,5 +1,5 @@
 /*============================== greeeting ================================*/
-.greeting {
+.greet {
 	height: 40px;
 	width: max-content;
 	margin: 10px;
@@ -7,14 +7,14 @@
 	justify-content: center;
 }
 
-.greeting__when {text-align: right;}
+.greet__time {text-align: right;}
 
-.greeting__who {
+.greet__username {
+	display: block;
 	color: white;
 	font-weight: normal;
 	font-family: Roboto, Arial, Helvetica, sans-serif;
 	font-size: inherit;
-	text-align: left;
 	border: none;
 	background-image: none;
 	background-color: transparent;
@@ -28,27 +28,38 @@
 
 /*========================= media queries =================================*/
 @media screen and (max-height: 720px) {
-	.greeting {
+	.greet {
 		font-size: 3.5em;
-		display: block;
-		position: relative;
-		left: 50%;
-		transform: translateX(-50%);
 		width: unset;
 	}
-	.greeting__when, .greeting__who {text-align: center;}
+}
+
+@media screen and (max-width: 670px) {
+	.greet {
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+	}
+	.greet__time, .greet__username {text-align: center;}
+	.greet__time {width: 100%;}
+	.greet__username {
+		position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+	}
 }
 
 @media screen and (max-height: 620px) {
-	.greeting {font-size: 3.3em;}
+	.greet {font-size: 3.3em;}
 }
 
 @media screen and (max-height: 550px) {
-	.greeting {font-size: 3em;}
+	.greet {font-size: 3em;}
 }
 
 @media screen and (max-height: 393px) {
-  .greeting {
+  .greet {
 		width: 600px;
 		transform: translateX(-50%);
 		font-size: 3em;
@@ -57,17 +68,17 @@
 }
 
 @media screen and (max-height: 330px) {
-  .greeting {top: -33%;}
+  .greet {top: -33%;}
 }
 
 @media screen and (max-height: 270px) {
-  .greeting {top: -42%;}
+  .greet {top: -42%;}
 }
 
 @media screen and (max-width: 620px) {
-	.greeting {width: 420px;}
+	.greet {width: 420px;}
 }
 
 @media screen and (max-width: 500px) {
-	.greeting {font-size: 2.2em;}
+	.greet {font-size: 2.2em;}
 }
