--- a/fonts/styles.css
+++ b/fonts/styles.css
@@ -1,19 +1,19 @@
 @charset "UTF-8";
 
 @font-face {
-  font-family: "icon";
-  src:url("fonts/icon.eot");
-  src:url("fonts/icon.eot?#iefix") format("embedded-opentype"),
-    url("fonts/icon.woff") format("woff"),
-    url("fonts/icon.ttf") format("truetype"),
-    url("fonts/icon.svg#icon") format("svg");
+  font-family: "fonts-icons";
+  src:url("fonts/fonts-icons.eot");
+  src:url("fonts/fonts-icons.eot?#iefix") format("embedded-opentype"),
+    url("fonts/fonts-icons.woff") format("woff"),
+    url("fonts/fonts-icons.ttf") format("truetype"),
+    url("fonts/fonts-icons.svg#fonts-icons") format("svg");
   font-weight: normal;
   font-style: normal;
 
 }
 
 [data-icon]:before {
-  font-family: "icon" !important;
+  font-family: "fonts-icons" !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -27,7 +27,7 @@
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "icon" !important;
+  font-family: "fonts-icons" !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
@@ -38,30 +38,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-sun:before {
+.icon-heart:before {
   content: "\61";
 }
-.icon-settings:before {
+.icon-heart-o:before {
   content: "\62";
 }
-.icon-chrome:before {
+.icon-settings:before {
   content: "\63";
 }
-.icon-apps:before {
+.icon-chrome:before {
   content: "\64";
 }
-.icon-like-love-streamline:before {
-  content: "\65";
-}
 .icon-twitter:before {
-  content: "\66";
-}
-.icon-wind:before {
-  content: "\67";
-}
-.icon-wind-cloud:before {
-  content: "\68";
-}
-.icon-wind-rain:before {
-  content: "\69";
+  content: "\65";
 }
