--- a/style.css
+++ b/style.css
@@ -34,24 +34,28 @@ a:hover {opacity: 1;}
 
 canvas {
 	position: relative;
-	left: 4px;
+	left: -20px;
+	transform: scale(0.4);
+	margin-top: -14px;
+	margin-bottom: -44px;
 }
 /*===========================================================================*/
 
 /*=================================== font ==================================*/
 @font-face {
-  font-family: "icon";
-  src:url("fonts-icons/icon.eot");
-  src:url("fonts-icons/icon.eot?#iefix") format("embedded-opentype"),
-    url("fonts-icons/icon.woff") format("woff"),
-    url("fonts-icons/icon.ttf") format("truetype"),
-    url("fonts-icons/icon.svg#icon") format("svg");
+  font-family: "fonts-icons";
+  src:url("fonts/fonts-icons.eot");
+  src:url("fonts/fonts-icons.eot?#iefix") format("embedded-opentype"),
+    url("fonts/fonts-icons.woff") format("woff"),
+    url("fonts/fonts-icons.ttf") format("truetype"),
+    url("fonts/fonts-icons.svg#fonts-icons") format("svg");
   font-weight: normal;
   font-style: normal;
+
 }
 
 [data-icon]:before {
-  font-family: "icon" !important;
+  font-family: "fonts-icons" !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -64,7 +68,7 @@ canvas {
 
 [class^="icon-"]:before,
 [class*=" icon-"]:before {
-  font-family: "icon" !important;
+  font-family: "fonts-icons" !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
@@ -74,15 +78,21 @@ canvas {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-sun:before {content: "\61";}
-.icon-settings:before {content: "\62";}
-.icon-chrome:before {content: "\63";}
-.icon-apps:before {content: "\64";}
-.icon-like-love-streamline:before {content: "\65";}
-.icon-twitter:before {content: "\66";}
-.icon-wind:before {content: "\67";}
-.icon-wind-cloud:before {content: "\68";}
-.icon-wind-rain:before {content: "\69";}
+.icon-heart:before {
+  content: "\61";
+}
+.icon-heart-o:before {
+  content: "\62";
+}
+.icon-settings:before {
+  content: "\63";
+}
+.icon-chrome:before {
+  content: "\64";
+}
+.icon-twitter:before {
+  content: "\65";
+}
 /*=========================================================================*/
 
 /*============================= background images ===========================*/
@@ -205,8 +215,10 @@ a, i {
 }
 
 .meteo-btn {
+	position: absolute;
 	height: 100%;
 	width: 100%;
+	top: -20px;
 	cursor: pointer;
 }
 
@@ -216,11 +228,10 @@ a, i {
 }
 
 .meteo__item-top .temperature__current	{
-	position: relative;
-	top: 8px;
-	left: -4px;
-	line-height: 66px;
-	font-size: 24px;
+	position: absolute;
+	top: 51px;
+	left: 49px;
+	font-size: 22px;
 }
 
 .meteo__item-bottom	{
@@ -424,7 +435,7 @@ a, i {
 /*============================== quote-block ==============================*/
 #quote-block {
 	height: 60px;
-	width: 472px;
+	width: 540px;
 	position: fixed;
 	bottom: 2.5%;
 	left: 50%;
@@ -437,7 +448,7 @@ a, i {
 	font-size: 1.3em;
 	font-weight: 300;
 	position: relative;
-	top: 62%;
+	top: 60%;
 	text-align: center;
 	opacity: 0.7;
 	transition: all 0.3s ease-in-out;
@@ -476,7 +487,7 @@ span,i {
 .toggle-on {
 	opacity: 0;
 	transition: all 0.7s ease-in-out;
-	transition-delay: 3s;
+	transition-delay: 0.5s;
 }
 
 .toggle-off {
