--- a/css/greeting.css
+++ b/css/greeting.css
@@ -1,15 +1,16 @@
 /*============================== greeeting ================================*/
-.greet {
-	height: 40px;
-	width: max-content;
+.greeting {
 	margin: 10px;
 	display: flex;
 	justify-content: center;
 }
 
-.greet__time {text-align: right;}
+.greeting__message {
+	text-align: right;
+}
 
-.greet__username {
+.greeting__username {
+	position: relative;
 	display: block;
 	color: white;
 	font-weight: normal;
@@ -19,8 +20,31 @@
 	background-image: none;
 	background-color: transparent;
 	box-shadow: none;
-	padding-top: 9px;
 	max-width: 350px;
+	min-width: 50px;
+	outline: none;
+	cursor: auto;
+	transition: 0.3s ease-out;
+	border-radius: 3px;
+}
+.greeting__username.empty:after {
+	content: "what's your name?";
+}
+.greeting__username.focus:after {
+	display: none;
+}
+.greeting__username:focus:before {
+	content: '';
+	position: absolute;
+	top: 100%;
+	left: 0;
+	right: 0;
+	border-bottom: 2px solid #fff;
+}
+
+.greeting__username.highlight {
+	background: rgba(255, 255, 255, 0.4);
+	transition: 0.1s ease-in;
 }
 
 ::placeholder {color: #fff;}
@@ -28,22 +52,22 @@
 
 /*========================= media queries =================================*/
 @media screen and (max-height: 720px) {
-	.greet {
+	.greeting {
 		font-size: 3.5em;
 		width: unset;
 	}
 }
 
 @media screen and (max-width: 670px) {
-	.greet {
+	.greeting {
     display: block;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
 	}
-	.greet__time, .greet__username {text-align: center;}
-	.greet__time {width: 100%;}
-	.greet__username {
+	.greeting__message, .greeting__username {text-align: center;}
+	.greeting__message {width: 100%;}
+	.greeting__username {
 		position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -51,15 +75,15 @@
 }
 
 @media screen and (max-height: 620px) {
-	.greet {font-size: 3.3em;}
+	.greeting {font-size: 3.3em;}
 }
 
 @media screen and (max-height: 550px) {
-	.greet {font-size: 3em;}
+	.greeting {font-size: 3em;}
 }
 
 @media screen and (max-height: 393px) {
-  .greet {
+  .greeting {
 		width: 600px;
 		transform: translateX(-50%);
 		font-size: 3em;
@@ -68,17 +92,17 @@
 }
 
 @media screen and (max-height: 330px) {
-  .greet {top: -33%;}
+  .greeting {top: -33%;}
 }
 
 @media screen and (max-height: 270px) {
-  .greet {top: -42%;}
+  .greeting {top: -42%;}
 }
 
 @media screen and (max-width: 620px) {
-	.greet {width: 420px;}
+	.greeting {width: 420px;}
 }
 
 @media screen and (max-width: 500px) {
-	.greet {font-size: 2.2em;}
+	.greeting {font-size: 2.2em;}
 }
