--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ a {
 
 a:hover {opacity: 1;}
 
+ul {list-style-type: none;}
+
 .icon-link {
 	opacity: 0.7;
 	cursor: pointer;
@@ -353,7 +355,7 @@ a, i {
 	bottom: -999999px;
 }
 
-#settings {
+#settings-label {
 	text-align: center;
 	height: 19px;
 	width: 19px;
@@ -376,11 +378,15 @@ a, i {
 	position: fixed;
 	left: 0.8%;
 	bottom: 9%;
-	padding: 18px;
+	margin: 18px;
 	font-size: 1.3em;
 	transition: all 0.3s ease-in-out;
 	z-index: 100;
   display: none;
+}
+
+.wrapper {
+	display: flex;
 }
 
 #settings-popup-window:before {
@@ -396,6 +402,44 @@ a, i {
 }
 
 .rotate {transform: rotate(60deg) scale(1.2);}
+
+.settings__left-block {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.settings__left-block--list {
+	width: 180px;
+	border-right: 1px solid rgba(255,255,255,0.1);
+	padding: 28px 0 0 0;
+	height: 93%;
+}
+
+.settings__left-block--list li {opacity: 0.7;}
+.settings__left-block--list li:hover {opacity: 1;}
+.settings__item-1 {padding: 6px 21px;}
+.settings__item-2 {
+	padding: 5px 21px;
+	font-size: 12px;
+}
+
+.settings__left-block--login {
+	height: 7%;
+	padding: 15px 19px 19px;
+	font-size: 13px;
+	background: rgba(255, 255, 255, 0.1 );
+}
+
+.login__title {
+	font-size: 14px;
+}
+
+.login__description {
+	font-size: 10px;
+	margin: 2px 0;
+	opacity: 0.6;
+}
 /*=========================================================================*/
 
 /*============================ geolocation-block ==========================*/
@@ -501,6 +545,10 @@ span,i {
 	transition-delay: 0.5s;
 }
 /*=========================================================================*/
+
+
+.active {opacity: 1;}
+
 
 /*========================== media queries ================================*/
 @media screen and (max-height: 720px) {
