--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ a {
 
 a:hover {opacity: 1;}
 
+a, i {
+	display: inline-block;
+  vertical-align: sub;
+  height: 16px;
+}
+
 ul {list-style-type: none;}
 
 .icon-link {
@@ -91,29 +97,17 @@ canvas {
 /*=========================================================================*/
 
 /*============================= background images ===========================*/
-.background-images {
-	width: 100%;
-	height: 100vh;
-	position: fixed;
-  left: 0px;
-  top: 0px;
-  z-index: 0;
-}
-
-.background-images img {
+.background__src {
+	display: block;
 	width: auto;
 	min-width: 100%;
 	height: 100vh;
-	position: absolute;
+	position: fixed;
 	left: 0;
 	right: 0;
 	top: 0;
 	bottom: 0;
 }
-
-.background-images .fade-out {opacity: 0;}
-
-.background-images .active {z-index: 1;}
 /*===========================================================================*/
 
 /*=============================== links-popup ===============================*/
@@ -124,27 +118,25 @@ canvas {
 	top: 3%;
 	font-size: 1.4em;
 	opacity: 0.8;
-	transition: all 0.3s ease-in-out;
 }
 
 .links:hover {opacity: 1;}
 
-#links-popup-window {
-	width: 200px;
-	height: 108px;
+.links__popup {
+	width: 250px;
+	height: 132px;
 	position: fixed;
 	left: 1.15%;
 	top: 7%;
 	background-color: black;
-	opacity: 0.8;
+	opacity: 0;
 	border-radius: 5px;
 	font-size: 1.3em;
-	transition: all 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
 	z-index: 50;
-	display: none;
 }
 
-#links-popup-window:before {
+.links__popup:before {
   content: "";
   width: 0;
   height: 0;
@@ -156,24 +148,12 @@ canvas {
   bottom: 100%;
 }
 
-input[type="checkbox"]:checked ~ #links-popup-window {
-	z-index: 50;
-  opacity: 0.9;
-  transform: translateY(10%);
-}
-
-#links-list {
+.links__list {
 	list-style-type: none;
 	position: relative;
 	left: 21px;
   top: 10px;
   line-height: 29px;
-}
-
-a, i {
-	display: inline-block;
-  vertical-align: sub;
-  height: 16px;
 }
 
 #chrome {top: -3px;}
@@ -262,7 +242,7 @@ a, i {
 	cursor: pointer;
 }
 
-#meteo-popup-window {
+.meteo__popup {
 	width: 362px;
 	height: 181px;
 	background-color: black;
@@ -273,14 +253,14 @@ a, i {
 	padding: 19px;
 	font-size: 1.3em;
 	z-index: 50;
-	display: none;
-	transition: all 0.3s ease-in-out;
+	opacity: 0;
+	transition: 0.3s ease-in-out;
 	text-align: center;
 }
 
-#meteo-popup-window .temperature__feels-like {opacity: 0.5;}
+.meteo__popup .temperature__feels-like {opacity: 0.5;}
 
-#meteo-popup-window:before {
+.meteo__popup:before {
   content: "";
   width: 0;
   height: 0;
@@ -335,7 +315,7 @@ a, i {
 /*=========================================================================*/
 
 /*============================== settings-popup ===========================*/
-.settings-geolocation-wrapper {
+.settings {
 	height: 60px;
 	width: 260px;
 	position: fixed;
@@ -343,13 +323,7 @@ a, i {
 	left: 0%;
 }
 
-#settings-checkbox {
-	position: fixed;
-	left: -999999px;
-	bottom: -999999px;
-}
-
-#settings-label {
+.settings__wheel {
 	text-align: center;
 	height: 19px;
 	width: 19px;
@@ -360,11 +334,11 @@ a, i {
 	opacity: 0.6;
 	padding: 0;
 	margin: 0;
-	transition: all 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
 	z-index: 60;
 }
 
-#settings-popup-window {
+.settings__popup {
 	width: 700px;
 	height: 450px;
 	background-color: rgba(0, 0, 0, 0.8);
@@ -373,63 +347,57 @@ a, i {
 	left: 0.8%;
 	bottom: 9%;
 	margin: 18px;
-	font-size: 1.3em;
-	transition: all 0.3s ease-in-out;
-	z-index: 100;
-  display: none;
-}
-
-.wrapper {
+	opacity: 0;
 	display: flex;
+	font-size: 1.3em;
+	transition: 0.3s ease-in-out;
 }
 
-#settings-popup-window:before {
+.settings__popup:before {
   content: "";
   width: 0;
   height: 0;
   border: 7px solid transparent;
-  border-top-color: black;
+  border-top-color: rgba(0, 0, 0, 0.8);
   opacity: 0.9;
   position: absolute;
 	left: 2.75%;
   top: 100%;
 }
 
-.rotate {transform: rotate(60deg) scale(1.2);}
-
-.settings__left-block {
+.settings__popup--left {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 }
 
-.settings__left-block--list {
+.settings__popup--left ul {
 	width: 180px;
 	border-right: 1px solid rgba(255,255,255,0.1);
 	padding: 28px 0 0 0;
 	height: 93%;
 }
 
-.settings__left-block--list li {opacity: 0.7;}
-.settings__left-block--list li:hover {opacity: 1;}
-.settings__item-1 {padding: 6px 21px;}
-.settings__item-2 {
+.settings__popup--left ul li {opacity: 0.7;}
+.settings__popup--left ul li:hover {opacity: 1;}
+.list-item__medium {padding: 6px 21px;}
+.list-item__small {
 	padding: 5px 21px;
 	font-size: 12px;
 }
 
-.settings__left-block--login {
+.settings__popup--left .login {
 	height: 7%;
 	padding: 15px 19px 19px;
 	font-size: 13px;
 	background: rgba(255, 255, 255, 0.1 );
 }
 
-.login__title {
+.settings__popup--left .login__title {
 	font-size: 14px;
 }
 
-.login__description {
+.settings__popup--left .login__description {
 	font-size: 10px;
 	margin: 2px 0;
 	opacity: 0.6;
@@ -437,7 +405,7 @@ a, i {
 /*=========================================================================*/
 
 /*============================ geolocation-block ==========================*/
-#geolocation-block {
+.background {
 	height: 60px;
 	width: 240px;
 	position: absolute;
@@ -446,20 +414,7 @@ a, i {
 	z-index: 20;
 }
 
-.geolocation-author {
-	opacity: 0;
-	position: fixed;
-	left: 5%;
-	bottom: 2%;
-	transition: all 0.3s ease-in-out;
-}
-
-#geolocation-block:hover .geolocation-author {
-	opacity: 0.7;
-	transform: translateY(20%);
-}
-
-.geolocation {
+.background__location {
 	position: fixed;
 	bottom: 1.5%;
 	left: 5%;
@@ -471,7 +426,20 @@ a, i {
 	transition: all 0.3s 0s ease;
 }
 
-#geolocation-block:hover .geolocation {transform: translateY(-30%);}
+.background:hover .background__location {transform: translateY(-30%);}
+
+.background__author {
+	opacity: 0;
+	position: fixed;
+	left: 5%;
+	bottom: 2%;
+	transition: all 0.3s ease-in-out;
+}
+
+.background:hover .background__author {
+	opacity: 0.7;
+	transform: translateY(20%);
+}
 /*=========================================================================*/
 
 /*============================== quote-block ==============================*/
@@ -526,23 +494,6 @@ span,i {
 
 #twitter {top:-3px;}
 /*=========================================================================*/
-
-/*========================= whole background up ===========================*/
-.toggle-on {
-	opacity: 0;
-	transition: all 0.7s ease-in-out;
-	transition-delay: 0.5s;
-}
-
-.toggle-off {
-	transition: all 0.3s ease-in-out;
-	transition-delay: 0.5s;
-}
-/*=========================================================================*/
-
-
-.active {opacity: 1;}
-
 
 /*========================== media queries ================================*/
 @media screen and (max-height: 720px) {
@@ -628,7 +579,7 @@ span,i {
 	}
 
 	.quote {top: 67%;}
-	#settings-popup-window {right: 0%;}
+	.settings__popup {right: 0%;}
 
 	#geolocation-block {
 		opacity: 0;
@@ -649,5 +600,15 @@ span,i {
 	}
 	.quote {font-size: 1.15em;}
 	.meteo-wrapper {top: -2.5%;}
+}
+/*=========================================================================*/
+
+/*=========================== Animations ==================================*/
+.show {opacity: 1;}
+.rotate {transform: rotate(60deg) scale(1.2);}
+.toggle-off {transition: 0.3s ease-in-out;}
+.toggle-on {
+	opacity: 0;
+	transition: 0.7s ease-in-out;
 }
 /*=========================================================================*/
